[package]
name = "llmctx"
version = "0.4.0"
edition = "2024"
description = "LLM context builder"
license = "MIT"
authors = ["Josh Voigts <joshvoigts@gmail.com>"]
repository = "https://github.com/joshvoigts/llmctx"
readme = "README.md"

[dependencies]
anyhow = "1.0.97"
ignore = "0.4.23"
optz = "0.5.0"
